--- a/index.html
+++ b/index.html
@@ -4,8 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotitos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="navega">
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+        </ul>
+    </div>
+    <!-- landing page -->
+    <img src="61qb3znFRdR7ZBYrvVtx0pfI4s.webp" alt="Fotitos">
+    <!-- <img src="61qb3znFRdR7ZBYrvVtx0pfI4s.webp" alt="Fotitos" style="width: 300px;"> -->
+    <img src="61qb3znFRdR7ZBYrvVtx0pfI4s.webp" alt="Fotitos" style="width: 200px;">
+
+    <section>
+        <h1>Subir Imagen</h1>
+        <form action="subir.php" method="POST" enctype="multipart/form-data">
+            <input type="text" name="titulo" placeholder="Titulo de la imagen">
+            <input type="file" name="imagen" placeholder="Imagen">
+            <textarea name="descripcion" placeholder="Descripcion"></textarea>
+            <input type="submit" value="Subir Imagen">
+        </form>
+    </section>
+    <!-- footer -->
+    <footer>
+        <p>Subir Imagenes</p>
+    </footer>
+
     
 </body>
+<!-- <style>
+    img{
+        width: 100px;
+    }
+</style> -->
+
 </html>
